# serde-hex

./: Cargo.toml  README.md
src/: lib.rs  types.rs  utils.rs
src/macros/: hex.rs  local.rs
tests/: extensions.rs  json.rs
