[package]
name = "stremio-serde-hex"
version = "0.1.1"
authors = ["Forrest Marshall <fourthetrees@gmail.com>"]
description = "Hexadecimal encoding/decoding with serde."
documentation = "https://docs.rs/stremio-serde-hex"
repository = "https://github.com/Stremio/serde-hex"
keywords = ["serde","hex","hexadecimal"]
license = "MIT/Apache-2.0"

edition = "2021"

[dependencies]
array-init = "2"
smallvec = { version = "1", features = ["write"] }
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
